Corrections from Schott, Chip and Tyler added until Methodology...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -41,7 +41,7 @@
 \newacronym{oc4}{OC4}{Ocean Chlorophyll 4-band}
 \newacronym{od}{OD}{optical density}
 \newacronym{oli}{OLI}{Operational Land Imager}
-\newacronym{par}{PAR}{photosynthetic available radiation}
+\newacronym{par}{PAR}{photosynthetically available radiation}
 \newacronym{pif}{PIF}{pseudo-invariant feature}
 \newacronym{qa}{QA}{quality assurance}
 \newacronym{rbins}{RBINS}{Royal Belgian Institute of Natural Sciences}
