--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,4 +1,4 @@
-\documentclass[oneside,11pt]{book}
+\documentclass[oneside,11pt,draft]{book}
 
 \usepackage{graphicx}
 
@@ -335,11 +335,11 @@ We used a look-up-table-based (LUT-based) inversion methodology to simultaneousl
 The LUT of remote-sensing reflectance spectra was created in Hydrolight using inherent optical properties (IOPs) measured in the field.
 
 % Results
-The retrieval algorithm was applied over three~\todo{three?} Landsat 8 scenes.
+The retrieval algorithm was applied over three Landsat 8 scenes.
 %
 The CPA concentration maps exhibit expected trends of low concentrations in clear waters and higher concentrations in turbid waters. 
 %
-We estimated a normalized root mean squared error (NRMSE) of about $10\%$ for Chlorophyll-{\it a} and total suspended solid (TSS), and about $5\%$ for colored dissolved organic matter (CDOM) when compared with {\it in situ} data. 
+We estimated a normalized root mean squared error (NRMSE) of about $14\%$ for Chlorophyll-{\it a}, $11\%$ for the total suspended solid (TSS), and $7\%$ for colored dissolved organic matter (CDOM) when compared with {\it in situ} data. 
 % Conclusions
 These results demonstrate that the developed algorithm allows the simultaneous mapping of concentration of all CPAs in Case 2 waters and over areas where the standard algorithms are not available due to spatial resolution.
 %
